Fix [spacing] login page

--- a/src/pages/LogIn/style.sass
+++ b/src/pages/LogIn/style.sass
@@ -6,7 +6,7 @@
 .full-form
   width: unset
   max-width: 600px
-  min-width: 200px
+  min-width: 300px
 
 .small-window
   background: #fafafaf6
@@ -26,8 +26,9 @@
   // overflow-y: scroll
   z-index: 6000
   border-radius: 0 !important
-  width: 100vw
-  height: 100vh
+  width: 100%
+  height: 100%
+  min-height: 100vh
   overflow-y: scroll
   display: flex
   flex-direction: column
@@ -36,3 +37,4 @@
 
 .center-title
   padding-left: 0px
+  display: flex
